[gd_scene load_steps=4 format=3 uid="uid://1t8ucv25ish7"]

[ext_resource type="Script" uid="uid://627s8p4r4mnp" path="res://src/scenes/ui/icons/relics/relic_icon.gd" id="1_cekjs"]
[ext_resource type="Texture2D" uid="uid://bqvm4vgi4c0dn" path="res://cc0_assets/white_glowing_circle.png" id="2_liuyj"]
[ext_resource type="Theme" uid="uid://ebjibaj7r6n3" path="res://src/scenes/theme/green_label.tres" id="3_qcs8v"]

[node name="RelicIcon" type="Control"]
z_index = 9
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_cekjs")
metadata/_custom_type_script = "uid://627s8p4r4mnp"

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 9
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
z_index = 9
layout_mode = 2
mouse_filter = 2

[node name="TextureControl" type="Control" parent="MarginContainer/AspectRatioContainer"]
z_index = 9
layout_mode = 2
mouse_filter = 2

[node name="RelicTexture" type="TextureRect" parent="MarginContainer/AspectRatioContainer/TextureControl"]
unique_name_in_owner = true
z_index = 9
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_liuyj")
expand_mode = 5
stretch_mode = 5

[node name="RelicLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_qcs8v")
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
